added prices and made changes to menu

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -13,6 +13,7 @@
     <div class="menu-container">
         <h1 class="menu-title">Menu for Call-in Orders</h1>
         <p class="menu-phone">(709) 882-2564</p>
+        <p class="menu-hours">Mon - Fri:&nbsp;&nbsp;6am - 7:15pm&nbsp;&nbsp;|&nbsp;&nbsp;Sat - Sun:&nbsp;&nbsp;1pm - 7:15pm</p>
         <hr class="title-divider">
         
         <div class="menu-grid">
@@ -27,39 +28,49 @@
                     <div class="menu-items">
                         <div class="menu-item">
                             <span class="item-name">Pepperoni</span>
-                            <!-- <span class="item-price">$13.99</span> -->
+                            <span class="item-price">$13.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Meat Lovers</span>
-                            <!-- <span class="item-price">$15.99</span> -->
+                            <span class="item-price">$15.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Deluxe</span>
-                            <!-- <span class="item-price">$17.99</span> -->
+                            <span class="item-price">$17.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">BBQ Chicken</span>
-                            <!-- <span class="item-price">$18.99</span> -->
+                            <span class="item-price">$18.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Hawaiian</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$13.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Greek Style</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$15.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Veggie</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$15.99</span>
                         </div>
                         <div class="menu-item">
-                            <span class="item-name">Garlic Fingers</span>
-                            <!-- <span class="item-price">$11.99</span> -->
+                            <div class="item-content">
+                                <span class="item-name">Garlic Fingers</span>
+                                <span class="item-description">Includes 2 donair</span>
+                            </div>
+                            <span class="item-price">$11.99</span>
                         </div>
                         <div class="menu-item">
-                            <span class="item-name">Garlic Fingers with Bacon</span>
-                            <!-- <span class="item-price">$13.50</span> -->
+                            <div class="item-content">
+                                <span class="item-name">Garlic Fingers with Bacon</span>
+                                <span class="item-description">Includes 2 donair</span>
+                            </div>
+                            <span class="item-price">$13.50</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Pizza Fingers (4 pc)</span>
+                            <span class="item-price">$6.99</span>
                         </div>
                     </div>
                 </section>
@@ -71,35 +82,35 @@
                     <div class="menu-items">
                         <div class="menu-item">
                             <span class="item-name">Plain</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">BBQ</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">BBQ Ranch</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Honey Garlic</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Hot Sauce</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Chipotle</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Salt & Pepper</span>
-                            <!-- <span class="item-price">$7.99</span> -->  
+                            <span class="item-price">$7.99</span>  
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Zinger Wings</span>
-                            <!-- <span class="item-price">$11.99</span> -->
+                            <span class="item-price">$11.99</span>
                         </div>
                     </div>
                 </section>
@@ -120,21 +131,26 @@
                                 <span class="item-name">Classic Nachos</span>
                                 <span class="item-description">Meat, 2x veggies, cheese</span>
                             </div>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$12.99</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-content">
                                 <span class="item-name">Chicken BBQ Ranch Nachos</span>
                                 <span class="item-description">BBQ Ranch, chicken, onions, peppers, cheese</span>
                             </div>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$14.99</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-content">
                                 <span class="item-name">Veggie Nachos</span>
-                                <!-- <span class="item-description">???</span> -->
                             </div>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$10.99</span>
+                        </div>
+                        <div class="menu-item addon-item">
+                            <div class="item-content">
+                                <span class="item-name addon-name">Add-On: 1 Salsa + 1 Sour Cream</span>
+                            </div>
+                            <span class="item-price">$2.00</span>
                         </div>
                     </div>
                 </section>
@@ -147,43 +163,43 @@
                     <div class="menu-items">
                         <div class="menu-item">
                             <span class="item-name">Crunch Burger Platter</span>
-                            <!-- <span class="item-price">$11.99</span> -->
+                            <span class="item-price">$11.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Clubhouse</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$7.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Clubhouse with Fries</span>
+                            <span class="item-price">$12.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Daily Soup</span>
-                            <!-- <span class="item-price">$4.99</span> -->
-                        </div>
-                        <div class="menu-item">
-                            <span class="item-name">Chicken Salad Sandwich</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$4.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Chicken Finger Platter</span>
-                            <!-- <span class="item-price">$13.99</span> -->
+                            <span class="item-price">$13.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Wraps</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">6 inch Sub</span>
-                            <!-- <span class="item-price">$7.99</span> -->
+                            <span class="item-price">$7.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">12 inch Sub</span>
-                            <!-- <span class="item-price">$11.99</span> -->
+                            <span class="item-price">$11.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Breakfast Sandwich</span>
-                            <!-- <span class="item-price">$4.99</span> -->  
+                            <span class="item-price">$4.99</span>  
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Grilled Cheese</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-price">$3.99</span>
                         </div>
                     </div>
                 </section>
@@ -196,20 +212,28 @@
                     <hr class="section-divider">
                     <div class="menu-items">
                         <div class="menu-item">
-                            <span class="item-name">Mozzarella Sticks</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-name">Fries</span>
+                            <span class="item-price">$4.99</span>
                         </div>
                         <div class="menu-item">
-                            <span class="item-name">Cheese Balls</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-name">Mozzarella Sticks (6pc)</span>
+                            <span class="item-price">$6.99</span>
                         </div>
                         <div class="menu-item">
-                            <span class="item-name">Chicken Nuggets</span>
-                            <!-- <span class="item-price">???</span> -->
+                            <span class="item-name">Cheese Balls (5pc)</span>
+                            <span class="item-price">$5.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Chicken Nuggets (6pc)</span>
+                            <span class="item-price">$4.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Popcorn Chicken</span>
-                            <!-- <span class="item-price">$3.99</span> -->
+                            <span class="item-price">$4.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Pretzels</span>
+                            <span class="item-price">$4.99</span>
                         </div>
                     </div>
                 </section>
