made changes to menu, added gitignore

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="menu-container">
-        <h1 class="menu-title">Menu for Call-in Orders</h1>
+        <h1 class="menu-title">Mac's Convenience<br/>Menu for Call-in Orders</h1>
         <p class="menu-phone">(709) 882-2564</p>
         <p class="menu-hours">Mon - Fri:&nbsp;&nbsp;6am - 7:15pm&nbsp;&nbsp;|&nbsp;&nbsp;Sat - Sun:&nbsp;&nbsp;1pm - 7:15pm</p>
         <hr class="title-divider">
@@ -57,14 +57,14 @@
                         <div class="menu-item">
                             <div class="item-content">
                                 <span class="item-name">Garlic Fingers</span>
-                                <span class="item-description">Includes 2 donair</span>
+                                <span class="item-description">Includes 2 donair sauce</span>
                             </div>
                             <span class="item-price">$11.99</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-content">
                                 <span class="item-name">Garlic Fingers with Bacon</span>
-                                <span class="item-description">Includes 2 donair</span>
+                                <span class="item-description">Includes 2 donair sauce</span>
                             </div>
                             <span class="item-price">$13.50</span>
                         </div>
