changes to menu

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -66,17 +66,23 @@
                                 <span class="item-name">Garlic Fingers with Bacon</span>
                                 <span class="item-description">Includes 2 donair sauce</span>
                             </div>
-                            <span class="item-price">$13.50</span>
+                            <span class="item-price">$13.99</span>
                         </div>
                         <div class="menu-item">
-                            <span class="item-name">Pizza Fingers (4 pc)</span>
-                            <span class="item-price">$6.99</span>
+                            <span class="item-name">Pizza Finger</span>
+                            <span class="item-price">$2.25</span>
+                        </div>
+                        <div class="addon-section">
+                            <div class="menu-item">
+                                <span class="item-name addon-name">Extra Toppings</span>
+                                <span class="item-price">$2.00 each</span>
+                            </div>
                         </div>
                     </div>
                 </section>
                 <section class="menu-section">
                     <h2 class="section-title">
-                        <span class="icon">🔥</span> Wings
+                        <span class="icon">🔥</span> Wings (6pc)
                     </h2>
                     <hr class="section-divider">
                     <div class="menu-items">
@@ -114,6 +120,36 @@
                         </div>
                     </div>
                 </section>
+                <section class="menu-section">
+                    <h2 class="section-title">
+                        <span class="icon">🍗</span> Chicken
+                    </h2>
+                    <hr class="section-divider">
+                    <div class="menu-items">
+                        <div class="menu-item">
+                            <span class="item-name">1pc with Fries</span>
+                            <span class="item-price">$10.95</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">2pc with Fries</span>
+                            <span class="item-price">$13.45</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">3pc with Fries</span>
+                            <span class="item-price">$16.95</span>
+                        </div>
+                        <div class="addon-section">
+                            <div class="menu-item">
+                                <span class="item-name addon-name">Add-On: Poutine</span>
+                                <span class="item-price">$3.50</span>
+                            </div>
+                            <div class="menu-item">
+                                <span class="item-name addon-name">Add-On: Gravy</span>
+                                <span class="item-price">$2.00</span>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
 
             <!-- Right Column -->
@@ -146,11 +182,11 @@
                             </div>
                             <span class="item-price">$10.99</span>
                         </div>
-                        <div class="menu-item addon-item">
-                            <div class="item-content">
+                        <div class="addon-section">
+                            <div class="menu-item">
                                 <span class="item-name addon-name">Add-On: 1 Salsa + 1 Sour Cream</span>
+                                <span class="item-price">$2.00</span>
                             </div>
-                            <span class="item-price">$2.00</span>
                         </div>
                     </div>
                 </section>
@@ -162,12 +198,32 @@
                     <hr class="section-divider">
                     <div class="menu-items">
                         <div class="menu-item">
-                            <span class="item-name">Crunch Burger Platter</span>
+                            <span class="item-name">Hamburger</span>
+                            <span class="item-price">$7.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Hamburger with Fries</span>
+                            <span class="item-price">$10.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Cheeseburger</span>
+                            <span class="item-price">$8.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Cheeseburger with Fries</span>
+                            <span class="item-price">$11.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Crunch Burger</span>
+                            <span class="item-price">$8.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Crunch Burger with Fries</span>
                             <span class="item-price">$11.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Clubhouse</span>
-                            <span class="item-price">$7.99</span>
+                            <span class="item-price">$8.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Clubhouse with Fries</span>
@@ -175,7 +231,7 @@
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Daily Soup</span>
-                            <span class="item-price">$4.99</span>
+                            <span class="item-price">$5.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Chicken Finger Platter</span>
@@ -225,15 +281,19 @@
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Chicken Nuggets (6pc)</span>
-                            <span class="item-price">$4.99</span>
+                            <span class="item-price">$5.99</span>
                         </div>
                         <div class="menu-item">
                             <span class="item-name">Popcorn Chicken</span>
+                            <span class="item-price">$5.99</span>
+                        </div>
+                        <div class="menu-item">
+                            <span class="item-name">Pretzels (when available)</span>
                             <span class="item-price">$4.99</span>
                         </div>
                         <div class="menu-item">
-                            <span class="item-name">Pretzels</span>
-                            <span class="item-price">$4.99</span>
+                            <span class="item-name">Coleslaw</span>
+                            <span class="item-price">$2.50</span>
                         </div>
                     </div>
                 </section>
